# lucivy

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION.md  NOTICE  README-pypi.md  README.md  cliff.toml  docker-compose.test.yml
.github/workflows/: ci.yml  pages.yml
benches/: agg_bench.rs  analyzer.rs  and_or_queries.rs  bool_queries_with_range.rs  exists_json.rs  index-bench.rs  ngram_bench.rs  range_queries.rs  range_query.rs  stress_threading.rs
bindings/cpp/: Cargo.toml  LICENSE  README.md  build.rs  test.cpp
bindings/cpp/src/: lib.rs
bindings/emscripten/: Cargo.toml  README.md  build.sh  lucivy.d.ts  package.json  test-node.mjs  test-playwright.mjs  test-runner.mjs  test.html
bindings/emscripten/js/: lucivy-worker.js  lucivy.d.ts  lucivy.js  opfs-bridge.js
bindings/emscripten/pkg/: lucivy.js
bindings/emscripten/src/: lib.rs  opfs.rs
bindings/nodejs/: Cargo.toml  README.md  index.d.ts  index.js  package.json  test.mjs  test_e2e.mjs
bindings/nodejs/src/: lib.rs
bindings/python/: Cargo.toml  README-pypi.md  README.md  build.sh  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_lucivy.py
bindings/wasm/: Cargo.toml  README.md  test-minimal.html  test-playwright.mjs  test-worker-direct.js  test.html
bindings/wasm/js/: lucivy-worker.js  lucivy.js
bindings/wasm/src/: directory.rs  lib.rs
bitpacker/: Cargo.toml
columnar/: Cargo.toml
columnar/src/: TODO.md
common/: Cargo.toml
doc/: book.toml
docs/: arsenal.md  clippy-v2-full.txt  clippy-v2-remaining.txt  linkedin-regex-demo-fr.md  linkedin-regex-demo.md
docs/1-avril-16h46/: 01-audit-merge-query-registry.md  02-chemins-indexation-complet.md  03-plan-registry-derive-single-pass.md
docs/10-mai-2026-05h05/: 01-rapport-session-10-mai.md  02-diagnostic-starts-with-bug.md  03-plan-uniformisation-query-paths.md  04-bug-bm25-multifield-progression.md  05-design-auto-doc-id.md  06-roadmap-post-v2.md  07-rapport-session-final.md
docs/11-avril-2026-11h53/: 01-plan-fuzzy-contains-rewrite.md  02-recap-session-11-avril.md  03-knowledge-dump-session-11-avril.md  04-audit-chemins-recherche-prescan.md  05-recap-session-12-avril.md  06-plan-playground-sharded-linux-demo.md  07-plan-unified-handle.md  08-plan-prefilter-node-ids.md  09-plan-luciole-async-executor.md  10-recap-session-12-avril-2.md
docs/11-mars-2026-12h25/: 01-plan-optimisations.md  02-analyse-merge-incremental.md  03-rapport-progression-merge-incremental.md  04-rapport-tests-et-drain-merges.md  05-rapport-nettoyage-inventory.md  06-plan-eventbus-generique-et-observabilite.md  07-plan-final-zero-deadlock-et-nettoyage.md  08-rapport-progression-chantiers-et-global-scheduler.md  09-rapport-self-messages-et-debug-events.md
docs/12-mars-2026-12h28/: 01-rapport-simplification-emscripten-et-playwright.md  02-wasm-commit-deadlock-approches.md  03-progression-flume-et-thread-persistant.md  04-diagnostic-commit-wasm-session2.md  05-observabilite-sab-ring-buffer-session3.md  06-resolution-asyncify-deadlock-session4.md  07-fix-utf8-ngram-panic-et-zip-central-directory.md  08-retrospective-wasm-flume-etait-ce-necessaire.md  09-design-startswith-query.md  10-startswith-query-et-nettoyage-cascade.md  11-plan-benchmarks-publication-annonce.md  12-draft-linkedin-post.md  13-benchmarks-batch-size-et-build-emscripten.md  14-playground-git-clone-et-startswith-ui.md  15-fix-merger-offsets-et-bm25-startswith.md  (+2 more)
examples/: aggregation.rs  basic_search.rs  custom_collector.rs  custom_tokenizer.rs  date_time_field.rs  deleting_updating_documents.rs  faceted_search.rs  faceted_search_with_tweaked_score.rs  filter_aggregation.rs  fuzzy_search.rs  index_from_multiple_threads.rs  index_with_json.rs  integer_range_search.rs  ip_field.rs  iterating_docs_and_positions.rs  json_field.rs  phrase_prefix_search.rs  pre_tokenized_text.rs  snippet.rs  stop_words.rs  warmer.rs
luciole/: Cargo.toml  LICENSE  README.md
luciole/src/: actor_state.rs  async_executor.rs  branch.rs  checkpoint.rs  dag.rs  envelope.rs  events.rs  fan_out.rs  gate.rs  generic_actor.rs  graph_node.rs  handler.rs  lib.rs  mailbox.rs  node.rs  observe.rs  pool.rs  port.rs  reply.rs  runtime.rs  scatter.rs  scheduler.rs  scope.rs  stream_dag.rs  wait_graph.rs
lucistore/: Cargo.toml
lucistore/src/: binary.rs  blob_cache.rs  blob_store.rs  delta.rs  delta_sharded.rs  fs_utils.rs  lib.rs  shard_storage.rs  snapshot.rs  sync_server.rs  version.rs
lucivy-fst/: Cargo.toml  LICENSE-MIT  README.md  build.rs
lucivy-fst/bench/: Cargo.toml
lucivy-fst/bench/src/: bench.rs
lucivy-fst/src/: bytes.rs  lib.rs  map.rs  output_table.rs  set.rs  stream.rs
lucivy-fst/src/automaton/: levenshtein.rs  mod.rs
lucivy-fst/src/raw/: build.rs  error.rs  mod.rs  node.rs  ops.rs
lucivy-fst/tests/: test.rs
lucivy_core/: Cargo.toml  README.md
lucivy_core/benches/: bench_contains.rs  bench_sharding.rs  bench_vs_tantivy.rs
lucivy_core/src/: blob_directory.rs  blob_store.rs  bm25_global.rs  diagnostics.rs  directory.rs  handle.rs  lib.rs  query.rs  search_dag.rs  shard_router.rs  sharded_handle.rs  snapshot.rs  sync.rs  tokenizer.rs
lucivy_core/tests/: acid_postgres.rs  test_cold_scheduler.rs  test_diagnostics.rs  test_fuzzy_ground_truth.rs  test_fuzzy_monotonicity.rs  test_lock_investigation.rs  test_luce_roundtrip.rs  test_merge_contains.rs  test_playground_repro.rs  test_regex_ground_truth.rs  test_search_mismatch.rs  test_sfx_v3_ground_truth.rs  test_sfx_v3_pipeline.rs  test_store_fallback.rs  test_two_fields.rs
lucivy_fts/rust/: Cargo.toml  build.rs
lucivy_fts/rust/src/: bridge.rs  lib.rs
ownedbytes/: Cargo.toml
playground/: build_dataset.py  index.html  lucivy-proxy-worker.js  serve.mjs  test-playground.mjs  test_highlight_mapping.mjs  test_multibyte.mjs  test_playground.py  test_regex_bench.mjs  test_regex_perf.mjs
query-grammar/: Cargo.toml
src/: compat_tests.rs  diag.rs  error_message.rs  lib.rs  macros.rs
sstable/: Cargo.toml  README.md
stacker/: Cargo.toml
tests/: merge_offsets_rag3db.rs
tokenizer-api/: Cargo.toml
(+484 files in other folders)
