[package]
name = "ld-lucivy-bitpacker"
version = "0.27.0"
edition = "2024"
authors = ["Luciform Research <luciedefraiteur@luciformresearch.com>"]
license = "MIT"
categories = []
description = """Lucivy-sub crate: bitpacking"""
repository = "https://github.com/L-Defraiteur/lucivy"
keywords = []
documentation = "https://docs.rs/ld-lucivy-bitpacker/"
homepage = "https://github.com/L-Defraiteur/lucivy"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitpacking = { version = "0.9.2", default-features = false, features = ["bitpacker1x"] }

[dev-dependencies]
rand = "0.8"
proptest = "1"
