[package]
name = "lucistore"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared persistence, sync and shard infrastructure for lucivy and friends"
authors = ["Luciform Research <luciedefraiteur@luciformresearch.com>"]
repository = "https://github.com/L-Defraiteur/lucivy"
keywords = ["storage", "sync", "blob", "shard"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
