[package]
name = "lucivy-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Core library for Lucivy full-text search: schema, query, handle, tokenizer"
authors = ["Luciform Research <luciedefraiteur@luciformresearch.com>"]
repository = "https://github.com/L-Defraiteur/lucivy"
readme = "README.md"
keywords = ["search", "full-text", "bm25", "lucivy"]
autobenches = false

[lib]
crate-type = ["lib"]

[dependencies]
ld-lucivy = { version = "0.27.0", path = "..", default-features = false, features = [
    "stopwords",
    "lz4-compression",
] }
luciole = { path = "../luciole" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
regex-syntax = "0.8"

[dev-dependencies]
postgres = "0.19"
tantivy = "0.25"

[[test]]
name = "bench_contains"
path = "benches/bench_contains.rs"
harness = true

[[test]]
name = "bench_sharding"
path = "benches/bench_sharding.rs"
harness = true

[[test]]
name = "bench_vs_tantivy"
path = "benches/bench_vs_tantivy.rs"
harness = true
