[package]
authors = ["Luciform Research <luciedefraiteur@luciformresearch.com>"]
name = "ld-ownedbytes"
version = "0.27.0"
edition = "2024"
description = "Expose data as static slice"
license = "MIT"
documentation = "https://docs.rs/ownedbytes/"
homepage = "https://github.com/L-Defraiteur/lucivy"
repository = "https://github.com/L-Defraiteur/lucivy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stable_deref_trait = "1.2.0"
