[package]
name = "lucivy-cpp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "C++ bindings for Lucivy full-text search, via CXX bridge"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
lucivy-core = { path = "../../lucivy_core" }
ld-lucivy = { path = "../..", default-features = false, features = [
    "stopwords",
    "lz4-compression",
    "stemmer",
] }
serde_json = "1"
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
