[package]
name = "lucivy-cpp"
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "C++ bindings for Lucivy full-text search, via CXX bridge"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
lucivy-core = { path = "../../lucivy_core" }
lucistore = { path = "../../lucistore" }
ld-lucivy = { path = "../..", default-features = false, features = [
    "stopwords",
    "lz4-compression",
] }
serde_json = "1"
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
