[package]
name = "lucivy-emscripten"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Emscripten (WASM + pthreads) binding for Lucivy full-text search"

[lib]
crate-type = ["staticlib"]

[dependencies]
lucivy-core = { path = "../../lucivy_core" }
ld-lucivy = { path = "../..", default-features = false, features = [
    "stopwords",
    "lz4-compression",
    "stemmer",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flume = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
