[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lucivy"
version = "0.1.0"
description = "Fast BM25 full-text search with substring matching, fuzzy search, and regex — powered by Rust"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Luciform Research", email = "contact@luciformresearch.com" },
]
keywords = ["search", "full-text", "bm25", "fuzzy", "substring", "fts", "tantivy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Text Processing :: Indexing",
]

[project.urls]
Homepage = "https://github.com/L-Defraiteur/lucivy"
Repository = "https://github.com/L-Defraiteur/lucivy"

[tool.maturin]
features = ["pyo3/extension-module"]
