[package]
name = "lucivy-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WASM bindings for Lucivy full-text search, with OPFS persistence"

[lib]
crate-type = ["cdylib"]

[dependencies]
lucivy-core = { path = "../../lucivy_core" }
ld-lucivy = { path = "../..", default-features = false, features = [
    "stopwords",
    "lz4-compression",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"

# uuid needs the "js" feature for WASM (uses crypto.getRandomValues instead of /dev/urandom)
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }
