[package]
name = "lucivy-fts"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "C FFI bindings for Lucivy full-text search, used as a rag3db extension"

[features]
default = ["cxx-bridge"]
cxx-bridge = ["dep:cxx"]

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
lucivy-core = { path = "../../lucivy_core" }
ld-lucivy = { path = "../..", default-features = false, features = [
    "stopwords",
    "lz4-compression",
] }
serde_json = "1"
cxx = { version = "1.0", optional = true }

[build-dependencies]
cxx-build = "1.0"

[profile.release]
opt-level = "z"
lto = "thin"
